# notify_service

./: .docker_env-ci  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule.db  docker-compose-ci.yaml  docker-compose.yaml  gunicorn.py  mydatabase  pyproject.toml  pytest.ini
.github/workflows/: action.yml
client/: admin.py  models.py  serializers.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_alter_client_options_alter_client_timezone.py  0003_alter_client_tag.py  0004_alter_client_timezone.py
core/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_auth_provider.py
core/services/: user_dao.py
core/social_auth/: serializers.py  services.py  utils.py  views.py
fixtures/: users.json
mailing/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options.py  0003_remove_mailing_client_properties_filter_and_more.py  0004_remove_mailing_client_filter_operator_code_and_more.py  0005_mailing_time_interval.py  0006_alter_mailing_time_interval.py
main/: asgi.py  celery.py  settings.py  urls.py
message/: admin.py  models.py  serializers.py  tasks.py  utils.py  views.py
message/migrations/: 0001_initial.py  0002_alter_message_client_id_alter_message_mailing_id.py  0003_alter_message_options.py  (+2 more)
prometheus/: prometheus.yml
templates/: base.html
tests/: conftest.py  factories.py
(+10 files in other folders)
